dev/mongo-app/mongoexpress-deployment.yaml
# momgoexpress deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
# create mongo express external service
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30000
    protocol: TCP
