dev/mongo-app/mongoexpress-ingress.yaml
# ingres for kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  namespace: mongodb
spec:
  rules:
  - host: localmongo.db
    http: 
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongoexpress-service.mongodb
            port:
              number: 8081
